# minor_embedded_systems_ros_ws

./: .gitignore  README.md
src/arduino_communication/: CMakeLists.txt  package.xml
src/arduino_communication/src/: SerialCommunicationNode.cpp
src/vision/: package.xml  setup.py
src/vision_package/: CMakeLists.txt  package.xml
src/vision_package/src/: ImageConverter.cpp
